--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9.13"
+python = "3.9.12"
 pydantic = "^1.9.1"
 fastapi = "^0.79.0"
 uvicorn = "^0.18.2"
@@ -14,6 +14,7 @@ Cerberus = "^1.3.4"
 marshmallow = "^3.17.0"
 autopep8 = "^1.6.0"
 marshmallow-dataclass = "^8.5.8"
+email-validator = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
